--- a/.github/workflows/_test_with_coverage.yml
+++ b/.github/workflows/_test_with_coverage.yml
@@ -10,64 +10,82 @@ jobs:
     timeout-minutes: 30
     steps:
       - name: ⬇️ Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+
+      # Install lcov
       - name: ⚙️ Install lcov
         run: |
           sudo apt-get update
           sudo apt-get -y install lcov
+
+      # Setup Flutter
       - name: ⚙️ Setup Flutter
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
           cache: true
-      - name: ⚙️ Setup Melos
-        uses: bluefireteam/melos-action@v2
+
+      # Install dependencies for all packages
       - name: ⚙️ Install dependencies for all packages
-        run: melos build:pub_get:all
+        run: |
+          flutter pub get
+          flutter pub run build_runner build --delete-conflicting-outputs
+
+      # Run tests with coverage
       - name: 🧪 Run tests with coverage
-        run: melos test:with-lcov-coverage:all
+        run: |
+          flutter test --coverage
+
+      # Publish test results
       - name: 🧪✅❌ Publish test results
         id: compute_test_results
-        uses: dorny/test-reporter@v1.6.0
+        uses: dorny/test-reporter@v1.9.1
         with:
           name: '🧪📊 Unit tests report'
           path: test_reports/*_test_report.json
           reporter: 'flutter-json'
           max-annotations: '50'
           token: ${{ secrets.GITHUB_TOKEN }}
+      
+      # Create passing test results badge
       - name: 🪪 Create passing test results badge
         if: github.event_name == 'push' && github.event.ref == 'refs/heads/main'
-        uses: schneegans/dynamic-badges-action@v1.6.0
+        uses: schneegans/dynamic-badges-action@v1.7.0
         with:
-          auth: ${{ secrets.BADGE_GIST_TOKEN }}
-          gistID: "2e904f1d8a9ef0e1e1458de1e7fcfba6"
+          auth: ${{ secrets.GIST_SECRET }}
+          gistID: "e75dd64e95cf4b4603c83cddd1ad76c2"
           filename: "passing-tests-badge.json"
           label: 'Tests'
           message: '${{ steps.compute_test_results.outputs.passed }} passed, ${{ steps.compute_test_results.outputs.failed }} failed'
           namedLogo: "TestCafe"
           labelColor: 'lightgrey'
           color: ${{ steps.compute_test_results.outputs.failed == 0 && 'brightgreen' ||  'red' }}
+
+      # Publish coverage report
       - name: 🧪📊 Publish coverage report
         if: github.event_name == 'pull_request'
-        uses: romeovs/lcov-reporter-action@v0.3.1
+        uses: romeovs/lcov-reporter-action@v0.4.0
         with:
           lcov-file: coverage_report/cleaned_combined_lcov.info
           github-token: ${{ secrets.GITHUB_TOKEN }}
           title: 'Coverage Report'
+
+      # Extract test coverage percentage
       - name: 🥤 Extract test coverage percentage
         if: github.event_name == 'push' && github.event.ref == 'refs/heads/main'
         run: |
-          melos run test:generate-html-coverage
           grep -o '.*headerCovTableEntryLo.*' coverage_report/index.html | sed -E  's/.*>(.*) %<.*/\1/' > coverage_percentage.txt
           percentage=$(cat coverage_percentage.txt)
           echo "Coverage percentage: $percentage"
           echo "coverage_percentage=$percentage" >> $GITHUB_ENV
+
+      # Create test coverage badge
       - name: 🪪 Create test coverage badge
         if: github.event_name == 'push' && github.event.ref == 'refs/heads/main'
-        uses: schneegans/dynamic-badges-action@v1.6.0
+        uses: schneegans/dynamic-badges-action@v1.7.0
         with:
-          auth: ${{ secrets.BADGE_GIST_TOKEN }}
-          gistID: "2e904f1d8a9ef0e1e1458de1e7fcfba6"
+          auth: ${{ secrets.GIST_SECRET }}
+          gistID: "e75dd64e95cf4b4603c83cddd1ad76c2"
           filename: "test-coverage-badge.json"
           label: 'Test coverage'
           message: '${{ env.coverage_percentage }} %'
