--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,11 +31,11 @@ on:
       - '.vscode/'
 
 jobs:
-  # testAndCoverage:
-  #   name: 🧪 Test
-  #   if: github.event.pull_request.draft == false
-  #   uses: ./.github/workflows/_test_with_coverage.yml
-  #   secrets: inherit
+  testAndCoverage:
+    name: 🧪 Test
+    if: github.event.pull_request.draft == false
+    uses: ./.github/workflows/_test_with_coverage.yml
+    secrets: inherit
 
   analyze:
     name: Analyze
@@ -50,7 +50,9 @@ jobs:
         with:
           channel: 'stable'
           cache: true
-      - run: flutter pub get
+      - run: |
+          flutter pub get
+          flutter pub run build_runner build --delete-conflicting-outputs
       - name: ⚠️ℹ️ Run Dart analysis for app package
         uses: zgosalvez/github-actions-analyze-dart@v3.0.3
         with:
