--- a/.github/workflows/_test_with_coverage.yml
+++ b/.github/workflows/_test_with_coverage.yml
@@ -46,32 +46,13 @@ jobs:
           reporter: 'flutter-json'
           max-annotations: '50'
           token: ${{ secrets.GITHUB_TOKEN }}
-      
-      # Create passing test results badge
-      - name: 🪪 Create passing test results badge
-        if: github.event_name == 'push' && github.event.ref == 'refs/heads/main'
-        uses: schneegans/dynamic-badges-action@v1.7.0
-        with:
-          auth: ${{ secrets.GIST_SECRET }}
-          gistID: "79ff0bbea1e2360c836aa165339c9f97"
-          host: https://api.github.com/gists/
-          filename: test.json # Use test.svg if you want to use the SVG mode.
-          label: Hello
-          message: World
-          color: orange
-          # filename: "passing-tests-badge.json"
-          # label: 'Tests'
-          # namedLogo: "TestCafe"
-          # labelColor: 'lightgrey'
-          # message: '${{ steps.compute_test_results.outputs.passed }} passed, ${{ steps.compute_test_results.outputs.failed }} failed'
-          # color: ${{ steps.compute_test_results.outputs.failed == 0 && 'brightgreen' ||  'red' }}
-
+     
       # Publish coverage report
       - name: 🧪📊 Publish coverage report
         if: github.event_name == 'pull_request'
         uses: romeovs/lcov-reporter-action@v0.4.0
         with:
-          lcov-file: coverage_report/cleaned_combined_lcov.info
+          lcov-file: coverage/lcov.info
           github-token: ${{ secrets.GITHUB_TOKEN }}
           title: 'Coverage Report'
 
@@ -84,18 +65,4 @@ jobs:
           echo "Coverage percentage: $percentage"
           echo "coverage_percentage=$percentage" >> $GITHUB_ENV
 
-      # Create test coverage badge
-      - name: 🪪 Create test coverage badge
-        if: github.event_name == 'push' && github.event.ref == 'refs/heads/main'
-        uses: schneegans/dynamic-badges-action@v1.7.0
-        with:
-          auth: ${{ secrets.GIST_SECRET }}
-          gistID: "79ff0bbea1e2360c836aa165339c9f97"
-          filename: "test.json"
-          label: 'Test coverage'
-          message: '${{ env.coverage_percentage }} %'
-          namedLogo: "Codecov"
-          labelColor: 'lightgrey'
-          valColorRange: ${{ env.coverage_percentage }}
-          minColorRange: 50
-          maxColorRange: 80
+  
