--- a/.github/workflows/_test_with_coverage.yml
+++ b/.github/workflows/_test_with_coverage.yml
@@ -49,7 +49,7 @@ jobs:
      
       # Publish coverage report
       - name: 🧪📊 Publish coverage report
-        if: github.event_name == 'pull_request'
+        if: github.event_name == 'push'
         uses: romeovs/lcov-reporter-action@v0.4.0
         with:
           lcov-file: coverage/lcov.info
