--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,32 +59,31 @@ jobs:
           fail-on-infos: true
           fail-on-warnings: true
 
-  # build:
-  #   name: Build Android
-  #   if: github.event.pull_request.draft == false
-  #   runs-on: ubuntu-latest
-  #   timeout-minutes: 30
-  #   steps:
-  #     - name: ⬇️ Checkout repository
-  #       uses: actions/checkout@v4
-  #     - name: ⚙️ Setup Flutter
-  #       uses: subosito/flutter-action@v2
-  #       with:
-  #         channel: 'stable'
-  #         cache: true
-  #     - name: ⚙️ Setup Java
-  #       uses: actions/setup-java@v3
-  #       with:
-  #         distribution: 'zulu'
-  #         java-version: "12.x"
-  #         cache: 'gradle'
-  #       id: java
-  #     - name: ⚙️ Setup Melos
-  #       uses: bluefireteam/melos-action@v2
-  #     - name: ⚙️ Install dependencies for all packages
-  #       run: melos build:pub_get:all
-  #     - name: 🤖🔨 Build Android app
-  #       run: |
-  #         pushd app/
-  #         flutter build appbundle --debug --flavor dev -t lib/main_dev.dart
-  #         popd
+  build:
+    name: Build Android
+    if: github.event.pull_request.draft == false
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    steps:
+      - name: ⬇️ Checkout repository
+        uses: actions/checkout@v4
+      - name: ⚙️ Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+          cache: true
+      - name: ⚙️ Setup Java
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'zulu'
+          java-version: "12.x"
+          cache: 'gradle'
+        id: java
+      # Install dependencies for all packages
+      - name: ⚙️ Install and Generate dependencies
+        run: |
+          flutter pub get
+          flutter pub run build_runner build --delete-conflicting-outputs
+      - name: 🤖🔨 Build Android app
+        run: |
+          flutter build appbundle -t lib/main.dart
