--- a/.github/workflows/deploy_testing_apps.yaml
+++ b/.github/workflows/deploy_testing_apps.yaml
@@ -41,7 +41,7 @@ jobs:
         id: semantic_release_info
         uses: cycjimmy/semantic-release-action@v4
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.RELEASE_AUTOMATION_PAT }}
         with:
           semantic_version: 19
       - name: 📝 Calculate complete UAT version for next version
@@ -55,7 +55,7 @@ jobs:
         with:
           tag: "release/uat/${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
           message: "UAT release ${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
-          github_token: ${{ secrets.RELEASE_AUTOMATOR_PAT }}
+          github_token: ${{ secrets.RELEASE_AUTOMATION_PAT }}
 
   deployUat:
     name: Deploy UAT
