--- a/.github/workflows/deploy_testing_apps.yaml
+++ b/.github/workflows/deploy_testing_apps.yaml
@@ -44,6 +44,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.RELEASE_AUTOMATION_PAT }}
         with:
           semantic_version: 19
+      - name: 📝 Make semver.sh executable
+        run: chmod +x ./scripts/semver.sh
       - name: 📝 Calculate complete UAT version for next version
         id: get_new_pubspec_version
         run: |
