--- a/.github/workflows/deploy_uat_apps.yaml
+++ b/.github/workflows/deploy_uat_apps.yaml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: 🏷️🧪 Get latest Testing release
+      - name: 🏷️🧪 Get latest UAT release
         id: get_latest_uat_release
         uses: "WyriHaximus/github-action-get-previous-tag@v1"
         with:
