--- a/.github/workflows/_deploy-env-apps.yml
+++ b/.github/workflows/_deploy-env-apps.yml
@@ -7,9 +7,6 @@ on:
       short-environment-name:
         required: true
         type: string
-      flavor:
-        required: true
-        type: string
       new-pubspec-version:
         required: true
         type: string
@@ -45,15 +42,15 @@ jobs:
       package-name: ${{ inputs.android-package-name }}
       release-status: ${{ inputs.android-release-status }}
       short-environment-name: ${{ inputs.short-environment-name }}
-      flavor: ${{ inputs.flavor }}
+      flavor: 'google'
       new-pubspec-version: ${{ inputs.new-pubspec-version }}
-  deployIos:
-    name: 🍏📦🚀 Build & deploy iOS ${{ inputs.short-environment-name }} release
-    uses: ./.github/workflows/_deploy-ios-app.yml
-    secrets: inherit
-    with:
-      environment-name: ${{ inputs.ios-environment-name }}
-      environment-url: ${{ inputs.ios-environment-url }}
-      short-environment-name: ${{ inputs.short-environment-name }}
-      flavor: ${{ inputs.flavor }}
-      new-pubspec-version: ${{ inputs.new-pubspec-version }}
+  # deployIos:
+  #   name: 🍏📦🚀 Build & deploy iOS ${{ inputs.short-environment-name }} release
+  #   uses: ./.github/workflows/_deploy-ios-app.yml
+  #   secrets: inherit
+  #   with:
+  #     environment-name: ${{ inputs.ios-environment-name }}
+  #     environment-url: ${{ inputs.ios-environment-url }}
+  #     short-environment-name: ${{ inputs.short-environment-name }}
+  #     flavor: ${{ inputs.flavor }}
+  #     new-pubspec-version: ${{ inputs.new-pubspec-version }}
