--- a/.github/workflows/deploy_uat_apps.yaml
+++ b/.github/workflows/deploy_uat_apps.yaml
@@ -62,7 +62,7 @@ jobs:
       - name: 📝 Conventional Changelog Action
         uses: TriPSs/conventional-changelog-action@v5
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.RELEASE_AUTOMATION_PAT }}
 
       - name: Get changelog for this release 
         id: changelog 
