--- a/.github/workflows/deploy_uat_apps.yaml
+++ b/.github/workflows/deploy_uat_apps.yaml
@@ -70,14 +70,13 @@ jobs:
           # Extract the changelog for the latest version from CHANGELOG.md 
           VERSION_TAG="${{ github.ref }}" 
           CHANGELOG=$(awk "/^## \[$VERSION_TAG\]/,/^## \[/" CHANGELOG.md | sed '$d') 
-          echo "$CHANGELOG" > RELEASE_CHANGELOG.md 
           
       - name: Create GitHub Release
         uses: ncipollo/release-action@v1 
         with: 
           token: ${{ secrets.GITHUB_TOKEN }} 
+          tag: "release/uat/${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
           name: "v${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
-          skip-tag: true
           draft: false 
           prerelease: false
   
