--- a/.github/workflows/deploy_uat_apps.yaml
+++ b/.github/workflows/deploy_uat_apps.yaml
@@ -37,6 +37,7 @@ jobs:
       - name: ⚙️ Prepare semantic release configuration
         run: |
           mv .releaserc.uat.json .releaserc.json
+
       - name: 🏷️🔮 Get next UAT release semver version
         id: semantic_release_info
         uses: cycjimmy/semantic-release-action@v4
@@ -44,14 +45,17 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.RELEASE_AUTOMATION_PAT }}
         with:
           semantic_version: 19
+          
       - name: 📝 Make semver.sh executable
         run: chmod +x ./scripts/semver.sh
+
       - name: 📝 Calculate complete UAT version for next version
         id: get_new_pubspec_version
         run: |
           last_uat_release=$(echo "${{ steps.get_latest_uat_release.outputs.tag }}" | sed -E "s/release\/uat\/(.*)/\1/")
           next_pubspec_version=$(./scripts/semver.sh "$last_uat_release" "${{ steps.semantic_release_info.outputs.new_release_version }}")
           echo "next_pubspec_version=$next_pubspec_version" >> $GITHUB_OUTPUT
+
       - name: 🏷️✍️ Create new UAT release tag
         uses: rickstaa/action-create-tag@v1
         with:
@@ -64,12 +68,12 @@ jobs:
         with:
           github-token: ${{ secrets.RELEASE_AUTOMATION_PAT }}
 
-      - name: Get changelog for this release 
-        id: changelog 
-        run: | 
-          # Extract the changelog for the latest version from CHANGELOG.md 
-          VERSION_TAG="${{ github.ref }}" 
-          CHANGELOG=$(awk "/^## \[$VERSION_TAG\]/,/^## \[/" CHANGELOG.md | sed '$d') 
+      # - name: Get changelog for this release 
+      #   id: changelog 
+      #   run: | 
+      #     # Extract the changelog for the latest version from CHANGELOG.md 
+      #     VERSION_TAG="${{ github.ref }}" 
+      #     CHANGELOG=$(awk "/^## \[$VERSION_TAG\]/,/^## \[/" CHANGELOG.md | sed '$d') 
           
       - name: Create GitHub Release
         uses: ncipollo/release-action@v1 
@@ -77,6 +81,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }} 
           tag: "release/uat/${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
           name: "v${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
+          bodyFile: "CHANGELOG.md"
           draft: false 
           prerelease: false
   
