--- a/.github/workflows/deploy_uat_apps.yaml
+++ b/.github/workflows/deploy_uat_apps.yaml
@@ -82,6 +82,7 @@ jobs:
           tag: "release/uat/${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
           name: "v${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
           bodyFile: "CHANGELOG.md"
+          makeLatest: true
           draft: false 
           prerelease: false
   
