--- a/.github/workflows/deploy_uat_apps.yaml
+++ b/.github/workflows/deploy_uat_apps.yaml
@@ -54,6 +54,7 @@ jobs:
         run: |
           last_uat_release=$(echo "${{ steps.get_latest_uat_release.outputs.tag }}" | sed -E "s/release\/uat\/(.*)/\1/")
           next_pubspec_version=$(./scripts/semver.sh "$last_uat_release" "${{ steps.semantic_release_info.outputs.new_release_version }}")
+          echo "Release Notes: ${{ steps.semantic_release_info.outputs.notes }}"
           echo "next_pubspec_version=$next_pubspec_version" >> $GITHUB_OUTPUT
 
       - name: 🏷️✍️ Create new UAT release tag
@@ -81,6 +82,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }} 
           tag: "release/uat/${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
           name: "v${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
+          git-message: 'chore(release): v${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}'
           bodyFile: "CHANGELOG.md"
           makeLatest: true
           draft: false 
