--- a/.github/workflows/deploy_uat_apps.yaml
+++ b/.github/workflows/deploy_uat_apps.yaml
@@ -40,11 +40,9 @@ jobs:
 
       - name: 🏷️🔮 Get next UAT release semver version
         id: semantic_release_info
-        uses: cycjimmy/semantic-release-action@v4
+        uses: cycjimmy/semantic-release-action@v4.1.0
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_AUTOMATION_PAT }}
-        with:
-          semantic_version: 19
           
       - name: 📝 Make semver.sh executable
         run: chmod +x ./scripts/semver.sh
@@ -54,7 +52,6 @@ jobs:
         run: |
           last_uat_release=$(echo "${{ steps.get_latest_uat_release.outputs.tag }}" | sed -E "s/release\/uat\/(.*)/\1/")
           next_pubspec_version=$(./scripts/semver.sh "$last_uat_release" "${{ steps.semantic_release_info.outputs.new_release_version }}")
-          echo "Release Notes: ${{ steps.semantic_release_info.outputs.notes }}"
           echo "next_pubspec_version=$next_pubspec_version" >> $GITHUB_OUTPUT
 
       - name: 🏷️✍️ Create new UAT release tag
@@ -64,10 +61,10 @@ jobs:
           message: "UAT release ${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
           github_token: ${{ secrets.RELEASE_AUTOMATION_PAT }}
 
-      - name: 📝 Conventional Changelog Action
-        uses: TriPSs/conventional-changelog-action@v5
-        with:
-          github-token: ${{ secrets.RELEASE_AUTOMATION_PAT }}
+      # - name: 📝 Conventional Changelog Action
+      #   uses: TriPSs/conventional-changelog-action@v5
+      #   with:
+      #     github-token: ${{ secrets.RELEASE_AUTOMATION_PAT }}
 
       # - name: Get changelog for this release 
       #   id: changelog 
@@ -81,9 +78,8 @@ jobs:
         with: 
           token: ${{ secrets.GITHUB_TOKEN }} 
           tag: "release/uat/${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
-          name: "v${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
-          git-message: 'chore(release): v${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}'
-          bodyFile: "CHANGELOG.md"
+          name: "v${{ steps.semantic_release_info.outputs.new_release_version  }}"
+          body: ${{ steps.semantic_release_info.outputs.new_release_notes }}
           makeLatest: true
           draft: false 
           prerelease: false
