--- a/.github/workflows/deploy_uat_apps.yaml
+++ b/.github/workflows/deploy_uat_apps.yaml
@@ -28,48 +28,47 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
       - name: 🏷️🧪 Get latest UAT release
         id: get_latest_uat_release
         uses: "WyriHaximus/github-action-get-previous-tag@v1"
         with:
           prefix: "release/uat/"
           fallback: 0.0.1
-      - name: ⚙️ Prepare semantic release configuration
-        run: |
-          mv .releaserc.uat.json .releaserc.json
 
-      - name: 🏷️🔮 Get next UAT release semver version
-        id: semantic_release_info
-        uses: cycjimmy/semantic-release-action@v4.1.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.RELEASE_AUTOMATION_PAT }}
+      # - name: ⚙️ Prepare semantic release configuration
+      #   run: |
+      #     mv .releaserc.uat.json .releaserc.json
+
+      # - name: 🏷️🔮 Get next UAT release semver version
+      #   id: semantic_release_info
+      #   uses: cycjimmy/semantic-release-action@v4.1.0
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.RELEASE_AUTOMATION_PAT }}
           
       - name: 📝 Make semver.sh executable
         run: chmod +x ./scripts/semver.sh
+
+      - name: 📝 Conventional Changelog Action
+        id: changelog
+        uses: TriPSs/conventional-changelog-action@v5
+        with:
+          github-token: ${{ secrets.RELEASE_AUTOMATION_PAT }}
+          tag-prefix: 'release/uat/'
 
       - name: 📝 Calculate complete UAT version for next version
         id: get_new_pubspec_version
         run: |
           last_uat_release=$(echo "${{ steps.get_latest_uat_release.outputs.tag }}" | sed -E "s/release\/uat\/(.*)/\1/")
-          next_pubspec_version=$(./scripts/semver.sh "$last_uat_release" "${{ steps.semantic_release_info.outputs.new_release_version }}")
+          next_pubspec_version=$(./scripts/semver.sh "$last_uat_release" "${{ steps.changelog.outputs.version }}")
           echo "next_pubspec_version=$next_pubspec_version" >> $GITHUB_OUTPUT
 
-      - name: 🔀 Push bump commit with changelog to repository
-        uses: stefanzweifel/git-auto-commit-action@v4.16.0
-        with:
-          commit_message: "chore(release): bump to version ${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }} [skip ci]"
-
-      - name: 🏷️✍️ Create new UAT release tag
-        uses: rickstaa/action-create-tag@v1
-        with:
-          tag: "release/uat/${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
-          message: "UAT release ${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
-          github_token: ${{ secrets.RELEASE_AUTOMATION_PAT }}
-
-      # - name: 📝 Conventional Changelog Action
-      #   uses: TriPSs/conventional-changelog-action@v5
+      # - name: 🏷️✍️ Create new UAT release tag
+      #   uses: rickstaa/action-create-tag@v1
       #   with:
-      #     github-token: ${{ secrets.RELEASE_AUTOMATION_PAT }}
+      #     tag: "release/uat/${{ steps.changelog.outputs.version }}"
+      #     message: "UAT release ${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
+      #     github_token: ${{ secrets.RELEASE_AUTOMATION_PAT }}
 
       # - name: Get changelog for this release 
       #   id: changelog 
@@ -78,16 +77,16 @@ jobs:
       #     VERSION_TAG="${{ github.ref }}" 
       #     CHANGELOG=$(awk "/^## \[$VERSION_TAG\]/,/^## \[/" CHANGELOG.md | sed '$d') 
           
-      - name: Create GitHub Release
-        uses: ncipollo/release-action@v1 
-        with: 
-          token: ${{ secrets.GITHUB_TOKEN }} 
-          tag: "release/uat/${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
-          name: "v${{ steps.semantic_release_info.outputs.new_release_version  }}"
-          body: ${{ steps.semantic_release_info.outputs.new_release_notes }}
-          makeLatest: true
-          draft: false 
-          prerelease: false
+      # - name: Create GitHub Release
+      #   uses: ncipollo/release-action@v1 
+      #   with: 
+      #     token: ${{ secrets.GITHUB_TOKEN }} 
+      #     tag: "release/uat/${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
+      #     name: ${{ steps.changelog.outputs.tag  }}
+      #     body: ${{  steps.changelog.outputs.clean_changelog }}
+      #     makeLatest: true
+      #     draft: false 
+      #     prerelease: false
   
   
   
