--- a/.github/workflows/deploy_uat_apps.yaml
+++ b/.github/workflows/deploy_uat_apps.yaml
@@ -63,6 +63,8 @@ jobs:
           next_pubspec_version=$(./scripts/semver.sh "$last_uat_release" "${{ steps.changelog.outputs.version }}")
           echo "next_pubspec_version=$next_pubspec_version" >> $GITHUB_OUTPUT
 
+      - name: 🏷️ Use new pubspec version
+        run: echo "The next pubspec version is ${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
       # - name: 🏷️✍️ Create new UAT release tag
       #   uses: rickstaa/action-create-tag@v1
       #   with:
@@ -77,16 +79,16 @@ jobs:
       #     VERSION_TAG="${{ github.ref }}" 
       #     CHANGELOG=$(awk "/^## \[$VERSION_TAG\]/,/^## \[/" CHANGELOG.md | sed '$d') 
           
-      # - name: Create GitHub Release
-      #   uses: ncipollo/release-action@v1 
-      #   with: 
-      #     token: ${{ secrets.GITHUB_TOKEN }} 
-      #     tag: "release/uat/${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
-      #     name: ${{ steps.changelog.outputs.tag  }}
-      #     body: ${{  steps.changelog.outputs.clean_changelog }}
-      #     makeLatest: true
-      #     draft: false 
-      #     prerelease: false
+      - name: ✍️ Create GitHub Release
+        uses: ncipollo/release-action@v1 
+        with: 
+          token: ${{ secrets.GITHUB_TOKEN }} 
+          tag: ${{ steps.changelog.outputs.tag  }}
+          name: "v${{ steps.changelog.outputs.version  }}"
+          body: ${{  steps.changelog.outputs.clean_changelog }}
+          makeLatest: true
+          draft: false 
+          prerelease: false
   
   
   
