--- a/.github/workflows/deploy_uat_apps.yaml
+++ b/.github/workflows/deploy_uat_apps.yaml
@@ -68,7 +68,7 @@ jobs:
       - name: 🏷️✍️ Create new UAT release tag
         uses: rickstaa/action-create-tag@v1
         with:
-          tag: "release/uat/${{ steps.changelog.outputs.version }}"
+          tag: "release/uat/${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
           message: "UAT release ${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
           github_token: ${{ secrets.RELEASE_AUTOMATION_PAT }}
 
@@ -83,7 +83,7 @@ jobs:
         uses: ncipollo/release-action@v1 
         with: 
           token: ${{ secrets.GITHUB_TOKEN }} 
-          tag: "release/uat/${{ steps.changelog.outputs.version }}"
+          tag: "release/uat/${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
           name: "v${{ steps.changelog.outputs.version  }}"
           body: ${{  steps.changelog.outputs.clean_changelog }}
           makeLatest: true
