--- a/.github/workflows/deploy_uat_apps.yaml
+++ b/.github/workflows/deploy_uat_apps.yaml
@@ -54,7 +54,12 @@ jobs:
         uses: TriPSs/conventional-changelog-action@v5
         with:
           github-token: ${{ secrets.RELEASE_AUTOMATION_PAT }}
-          skip-tag: true
+          tag-prefix: 'release/uat/'
+          skip-version-file: true
+          skip-commit: true
+          skip-bump: true
+          fallback-version: '0.0.1'
+          version-file: 'pubspec.yaml'
 
       - name: 📝 Calculate complete UAT version for next version
         id: get_new_pubspec_version
@@ -63,14 +68,14 @@ jobs:
           next_pubspec_version=$(./scripts/semver.sh "$last_uat_release" "${{ steps.changelog.outputs.version }}")
           echo "next_pubspec_version=$next_pubspec_version" >> $GITHUB_OUTPUT
 
-      # - name: 🏷️ Use new pubspec version
-      #   run: echo "The next pubspec version is ${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
-      - name: 🏷️✍️ Create new UAT release tag
-        uses: rickstaa/action-create-tag@v1
-        with:
-          tag: "release/uat/${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
-          message: "UAT release ${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
-          github_token: ${{ secrets.RELEASE_AUTOMATION_PAT }}
+      - name: 🏷️ Use new pubspec version
+        run: echo "The next pubspec version is ${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
+      # - name: 🏷️✍️ Create new UAT release tag
+      #   uses: rickstaa/action-create-tag@v1
+      #   with:
+      #     tag: "release/uat/${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
+      #     message: "UAT release ${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
+      #     github_token: ${{ secrets.RELEASE_AUTOMATION_PAT }}
 
       # - name: Get changelog for this release 
       #   id: changelog 
@@ -79,16 +84,16 @@ jobs:
       #     VERSION_TAG="${{ github.ref }}" 
       #     CHANGELOG=$(awk "/^## \[$VERSION_TAG\]/,/^## \[/" CHANGELOG.md | sed '$d') 
           
-      - name: ✍️ Create GitHub Release
-        uses: ncipollo/release-action@v1 
-        with: 
-          token: ${{ secrets.GITHUB_TOKEN }} 
-          tag: "release/uat/${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
-          name: "v${{ steps.changelog.outputs.version  }}"
-          body: ${{  steps.changelog.outputs.clean_changelog }}
-          makeLatest: true
-          draft: false 
-          prerelease: false
+      # - name: ✍️ Create GitHub Release
+      #   uses: ncipollo/release-action@v1 
+      #   with: 
+      #     token: ${{ secrets.GITHUB_TOKEN }} 
+      #     tag: "release/uat/${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
+      #     name: "v${{ steps.changelog.outputs.version  }}"
+      #     body: ${{  steps.changelog.outputs.clean_changelog }}
+      #     makeLatest: true
+      #     draft: false 
+      #     prerelease: false
   
   
   
