--- a/.github/workflows/deploy_uat_apps.yaml
+++ b/.github/workflows/deploy_uat_apps.yaml
@@ -59,7 +59,7 @@ jobs:
           skip-commit: true
           skip-bump: true
           fallback-version: '0.0.1'
-          version-file: 'pubspec.yaml'
+          version-file: './pubspec.yaml'
 
       - name: 📝 Calculate complete UAT version for next version
         id: get_new_pubspec_version
