--- a/.github/workflows/deploy_uat_apps.yaml
+++ b/.github/workflows/deploy_uat_apps.yaml
@@ -55,10 +55,10 @@ jobs:
         with:
           github-token: ${{ secrets.RELEASE_AUTOMATION_PAT }}
           tag-prefix: 'release/uat/'
-          skip-version-file: true
           skip-commit: true
           skip-bump: true
           fallback-version: '0.0.1'
+          version-file: './pubspec.yaml'
 
       - name: 📝 Calculate complete UAT version for next version
         id: get_new_pubspec_version
