--- a/.github/workflows/deploy_uat_apps.yaml
+++ b/.github/workflows/deploy_uat_apps.yaml
@@ -13,10 +13,10 @@ on:
       - '.vscode/'
 
 jobs:
-  testAndCoverage:
-    name: 🧪 Test
-    uses: ./.github/workflows/_test_with_coverage.yml
-    secrets: inherit
+  # testAndCoverage:
+  #   name: 🧪 Test
+  #   uses: ./.github/workflows/_test_with_coverage.yml
+  #   secrets: inherit
 
   gitRelease:
     name: Create git release for UAT app
@@ -40,38 +40,40 @@ jobs:
       #   run: |
       #     mv .releaserc.uat.json .releaserc.json
 
-      # - name: 🏷️🔮 Get next UAT release semver version
-      #   id: semantic_release_info
-      #   uses: cycjimmy/semantic-release-action@v4.1.0
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.RELEASE_AUTOMATION_PAT }}
-          
+      - name: 🏷️🔮 Get next UAT release semver version
+        id: semantic_release_info
+        uses: cycjimmy/semantic-release-action@v4.1.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.RELEASE_AUTOMATION_PAT }}
+        with:
+          semantic_version: 19
+
       - name: 📝 Make semver.sh executable
         run: chmod +x ./scripts/semver.sh
 
-      - name: 📝 Conventional Changelog Action
-        id: changelog
-        uses: TriPSs/conventional-changelog-action@v5
-        with:
-          github-token: ${{ secrets.RELEASE_AUTOMATION_PAT }}
-          tag-prefix: 'release/uat/'
-          skip-commit: true
+      # - name: 📝 Conventional Changelog Action
+      #   id: changelog
+      #   uses: TriPSs/conventional-changelog-action@v5
+      #   with:
+      #     github-token: ${{ secrets.RELEASE_AUTOMATION_PAT }}
+      #     tag-prefix: 'release/uat/'
+      #     skip-commit: true
 
       - name: 📝 Calculate complete UAT version for next version
         id: get_new_pubspec_version
         run: |
           last_uat_release=$(echo "${{ steps.get_latest_uat_release.outputs.tag }}" | sed -E "s/release\/uat\/(.*)/\1/")
-          next_pubspec_version=$(./scripts/semver.sh "$last_uat_release" "${{ steps.changelog.outputs.version }}")
+          next_pubspec_version=$(./scripts/semver.sh "$last_uat_release" "${{ steps.semantic_release_info.outputs.new_release_version }}")
           echo "next_pubspec_version=$next_pubspec_version" >> $GITHUB_OUTPUT
 
-      - name: 🏷️ Use new pubspec version
-        run: echo "The next pubspec version is ${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
-      # - name: 🏷️✍️ Create new UAT release tag
-      #   uses: rickstaa/action-create-tag@v1
-      #   with:
-      #     tag: "release/uat/${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
-      #     message: "UAT release ${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
-      #     github_token: ${{ secrets.RELEASE_AUTOMATION_PAT }}
+      # - name: 🏷️ Use new pubspec version
+      #   run: echo "The next pubspec version is ${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
+      - name: 🏷️✍️ Create new UAT release tag
+        uses: rickstaa/action-create-tag@v1
+        with:
+          tag: "release/uat/${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
+          message: "UAT release ${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
+          github_token: ${{ secrets.RELEASE_AUTOMATION_PAT }}
 
       # - name: Get changelog for this release 
       #   id: changelog 
