--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,19 +1,44 @@
 {
     "ci": true,
-    "dryRun": true,
     "branches": [
       "main"
     ],
     "tagFormat": "release/prod/${version}",
     "plugins": [
-      "@semantic-release/commit-analyzer",
+      [
+        "@semantic-release/commit-analyzer",
+        {
+          "preset": "eslint",
+          "releaseRules": [
+            { "tag": "breaking", "release": "major" },
+            { "tag": "build", "release": "minor" },
+            { "tag": "chore", "release": "minor" },
+            { "tag": "feat", "release": "minor" },
+            { "tag": "test", "release": "patch" },
+            { "tag": "refactor", "release": "patch" },
+            { "tag": "style", "release": "patch" },
+            { "tag": "docs", "release": "patch" },
+            { "tag": "perf", "release": "patch" },
+            { "tag": "fix", "release": "patch" },
+            { "tag": "revert", "release": "patch" }
+          ]
+        }
+      ],
       "@semantic-release/release-notes-generator",
       [
-        "@semantic-release/changelog",
-        {
-          "changelogFile": "CHANGELOG.md",
-          "changelogTitle": "# CHANGELOG"
-        }
-      ]
+          "@semantic-release/changelog",
+          {
+              "changelogFile": "CHANGELOG.md"
+          }
+      ],
+      [
+          "@semantic-release/git",
+          {
+              "assets": [
+                  "CHANGELOG.md"
+              ]
+          }
+      ],
+      "@semantic-release/github"
     ]
   }
