--- a/.releaserc.json
+++ b/.releaserc.json
@@ -22,7 +22,13 @@
                 "message": "chore(release): ${nextRelease.version} [skip ci]"
             }
         ],
-        "@semantic-release/github"
+        [
+          "@semantic-release/github",
+          {
+            "successComment": false,
+            "failTitle": false
+          }
+        ]
 
     ]
   }
