feat(bene): add shit

--- a/.releaserc.prod.json
+++ b/.releaserc.prod.json
@@ -19,7 +19,7 @@
               "assets": [
                   "CHANGELOG.md"
               ],
-              "message": "chore(release): ${nextRelease.version} [skip ci]"
+              "message": "chore(release): v${nextRelease.version} [skip ci]"
           }
       ],
       [
