--- a/.github/workflows/deploy_uat_apps.yaml
+++ b/.github/workflows/deploy_uat_apps.yaml
@@ -56,6 +56,15 @@ jobs:
         run: |
           last_uat_release=$(echo "${{ steps.get_latest_uat_release.outputs.tag }}" | sed -E "s/release\/uat\/(.*)/\1/")
           next_pubspec_version=$(./scripts/semver.sh "$last_uat_release" "${{ steps.semantic_release_info.outputs.new_release_version }}")
+          
+          echo "pubspec.yaml before update:"
+          cat pubspec.yaml
+          
+          sed -i.bak -E "s/^version: .*/version: $next_pubspec_version/" pubspec.yaml
+          
+          echo "pubspec.yaml after update:"
+          cat pubspec.yaml
+
           echo "next_pubspec_version=$next_pubspec_version" >> $GITHUB_OUTPUT
 
       # - name: 🏷️ Use new pubspec version
