--- a/.github/workflows/deploy-prod-apps.yml
+++ b/.github/workflows/deploy-prod-apps.yml
@@ -40,16 +40,16 @@ jobs:
         with:
           semantic_version: 19  
 
-      - name: 📝 Make semver.sh executable
-        run: chmod +x ./scripts/semver.sh
+      # - name: 📝 Make semver.sh executable
+      #   run: chmod +x ./scripts/semver.sh
      
-      - name: 📝 Edit pubspec version
-        id: get_new_pubspec_version
-        run: |
-          last_prod_release=$(echo "${{ steps.get_latest_prod_release.outputs.tag }}" | sed -E "s/release\/prod\/(.*)/\1/")
-          next_pubspec_version=$(./scripts/semver.sh "$last_prod_release" "${{ steps.semantic_release_info.outputs.new_release_version }}")
-          sed -Ei "s/^version: (.*)/version: $next_pubspec_version/" pubspec.yaml
-          echo "next_pubspec_version=$next_pubspec_version" >> $GITHUB_OUTPUT
+      # - name: 📝 Edit pubspec version
+      #   id: get_new_pubspec_version
+      #   run: |
+      #     last_prod_release=$(echo "${{ steps.get_latest_prod_release.outputs.tag }}" | sed -E "s/release\/prod\/(.*)/\1/")
+      #     next_pubspec_version=$(./scripts/semver.sh "$last_prod_release" "${{ steps.semantic_release_info.outputs.new_release_version }}")
+      #     sed -Ei "s/^version: (.*)/version: $next_pubspec_version/" pubspec.yaml
+      #     echo "next_pubspec_version=$next_pubspec_version" >> $GITHUB_OUTPUT
   
       # - name: 🏷️✍️ Create new Prod release tag
       #   uses: rickstaa/action-create-tag@v1
